
2021-10-22  Ron Norman <rjn@inglenet.com>

	* fextfh.c: Changed to select cob_file/FCD pairing based on 
				the 'file name' instead of the FCD address in order
				to handle the case of the FCD being used for more
				than one open file
	* fextfh.c: Removed update of FCD-NAME-LENGTH

2021-10-03  Ron Norman <rjn@inglenet.com>

	* fileio.c: for LS_OPTIONS set defaults when base format is defined
				Always check IO/xx_OPTIONS and IO_asgname regardless
				of filename-mapping setting
	* fisam.c: Report maximum number of key parts if less than COB_MAX_KEYCOMP
	* fextfh.c: Use cob_file_malloc to alloc cob_file

2021-10-02  Ron Norman <rjn@inglenet.com>

	* common.c: Runtime report show 'not set' if that was the default
	* fileio.c: Change default for LS_SPLIT = TRUE
				Check LINE SEQUENTIAL data and if invalid return 09 status

2021-10-01  Ron Norman <rjn@inglenet.com>

	* coblocal.h: Removed the cob_mf_ls_xxx fields
				replaced cob_gc_files/cob_mf_files with cob_file_format
	* common.c: Changes related to removal of COB_MF_LS_xxx from runtime.cfg
	* fileio.c: Changes related to removal of COB_MF_LS_xxx from runtime.cfg

2021-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* fextfh.c: merged EXTFH changes from 3.x (fileio.c)

2021-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: save-guard against broken cob_module chain in dump
	* termio.c, common.c: allow to explicit disable dump

2021-09-30  Ron Norman <rjn@inglenet.com>

	* common.h: COB_MAX_KEYCOMP increased to 16
	* fileio.h: config.h is only included if not already
	* fisam.c: (COB_MAX_KEYCOMP) is compared to actual limit in
			the ISAM libray and may reduce to what is allowed

2021-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (EXTFH3): also handle OP_FLUSH, OP_DELETE_FILE, OP_COMMIT and
	  OP_ROLLBACK before checking record-pointer;
	  set file status 9/100 for unknown op-codes
	* common.c (cob_external_addr): split into muliple functions