@@ -112,7 +112,7 @@ PF
 RF
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -181,7 +181,7 @@ AT_DATA([reference], [
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -250,7 +250,7 @@ AT_DATA([reference], [
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -319,7 +319,7 @@ AT_CAPTURE_FILE(./report.txt)
 
 AT_DATA([reference], [])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -381,7 +381,7 @@ goodbye                        <--->
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -453,7 +453,7 @@ goodbye                        <--->
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -768,7 +768,7 @@ CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -1121,7 +1121,7 @@ CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST    DISCT. %    DISCT
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -1491,7 +1491,7 @@ CUST. NO.     CUST. NAME     DEPT.    ITEM NO.    ITEM COST    DISCT. %    DISCT
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -1791,7 +1791,7 @@ CUST. NO.     CUST. NAME                          ITEM COST                DISCT
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -2207,7 +2207,7 @@ AT_DATA([reference], [                          D I S T R I C T   S A L E S   R 
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -2888,7 +2888,7 @@ DEPARTMENT NUMBER:  25 MAINTENANCE
                                     $17,208.00 100%   $1,006.78 100%   $2,456.42 100%      $80.00 100%    $13,843.92 100%
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -3056,7 +3056,7 @@ Ln  --ID--     --------Name--------   Major *-*      +Odd+  +Even+
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -3208,7 +3208,7 @@ AT_DATA([reference], [
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -3556,7 +3556,7 @@ AT_DATA([reference], [                                           CUSTOMER ORDER 
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -3785,7 +3785,7 @@ AT_DATA([reference], [                                                          
 
 ])
 #" <- fix code highlighting
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -3977,7 +3977,7 @@ AT_DATA([reference], [
                              -+* End of Page *+-      ************        *************       **************
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -4105,7 +4105,7 @@ C        3rd Detail 2
 
 ])
 
-AT_CHECK([diff reference report.txt], [0], [], [])
+AT_CHECK([gcdiff reference report.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -4210,7 +4210,7 @@ Tag1 *Tag2 **Tag1 *Tag2 **Tag1 *Tag2 **
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -4425,8 +4425,8 @@ Hi-Q:
 Hi-Q:
 ])
 
-AT_CHECK([diff reference report_var.txt], [0])
-AT_CHECK([diff reference report_lit.txt], [0])
+AT_CHECK([gcdiff reference report_var.txt], [0])
+AT_CHECK([gcdiff reference report_lit.txt], [0])
 
 AT_CLEANUP
 
@@ -4572,7 +4572,7 @@ Hi-Q:
 Hi-Q:
 ])
 
-AT_CHECK([diff reference tstdmrp.txt], [0], [], [])
+AT_CHECK([gcdiff reference tstdmrp.txt], [0], [], [])
 
 AT_CLEANUP
 
@@ -4638,7 +4638,7 @@ goodbye                        <--->
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -4698,7 +4698,7 @@ AT_CAPTURE_FILE(./report.txt)
 
 AT_DATA([reference], [])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -4752,7 +4752,7 @@ AT_CAPTURE_FILE(./report.txt)
 
 AT_DATA([reference], [])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -9075,7 +9075,7 @@ IN150202   20150202                          OR150216          016  ITEM_NUMBER_
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
@@ -9337,7 +9337,7 @@ AT_DATA([reference], [                           STARK TECHNOLOGIES MONTHLY REPO
 
 ])
 
-AT_CHECK([diff reference report.txt], [0])
+AT_CHECK([gcdiff reference report.txt], [0])
 
 AT_CLEANUP
 
